--- a/publications.html
+++ b/publications.html
@@ -66,47 +66,47 @@
             <div class="container content">
                 <h3 id="preprints">Preprints</h3>
 <ul>
-  <li>S. Huang, E. Ailer, N. Kilbertus, N. Pfister: <em>Supervised Learning and Model Analysis with Compositional Data</em>. Preprint <a href="https://arxiv.org/abs/2205.07271">https://arxiv.org/abs/2205.07271</a></li>
+  <li>S. Huang, E. Ailer, N. Kilbertus, N. Pfister: <em>Supervised Learning and Model Analysis with Compositional Data</em>.<br />Preprint <a href="https://arxiv.org/abs/2205.07271">https://arxiv.org/abs/2205.07271</a></li>
 </ul>
 
 <h3 id="2023">2023</h3>
 <ul>
-  <li>N. Thams, S. Saengkyongam, N. Pfister, J. Peters: <em>Statistical Testing under Distributional Shifts</em>. Journal of the Royal Statistical Society: Series B (Accepted). Preprint <a href="https://arxiv.org/abs/2105.10821">https://arxiv.org/abs/2105.10821</a></li>
+  <li>N. Thams, S. Saengkyongam, N. Pfister, J. Peters: <em>Statistical Testing under Distributional Shifts</em>. Journal of the Royal Statistical Society: Series B (Accepted).<br />Preprint <a href="https://arxiv.org/abs/2105.10821">https://arxiv.org/abs/2105.10821</a></li>
 </ul>
 
 <h3 id="2022">2022</h3>
 <ul>
   <li>
-    <p>S. Saengkyongam, N. Thams, J. Peters, N. Pfister: <em>Invariant Policy Learning: A causal perspective</em>. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) (Accepted). Preprint <a href="https://arxiv.org/abs/2106.00808">https://arxiv.org/abs/2106.00808</a></p>
+    <p>S. Saengkyongam, N. Thams, J. Peters, N. Pfister: <em>Invariant Policy Learning: A causal perspective</em>. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) (Accepted).<br />Preprint <a href="https://arxiv.org/abs/2106.00808">ArXiv</a>.</p>
   </li>
   <li>
-    <p>A. Ruaud, N. Pfister, R. Ley, N. Youngblut: <em>Interpreting tree ensemble machine learning models with endoR</em>. PLOS Computational Biology (Accepted). Preprint <a href="https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1">https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1</a></p>
+    <p>A. Ruaud, N. Pfister, R. Ley, N. Youngblut: <em>Interpreting tree ensemble machine learning models with endoR</em>. PLOS Computational Biology, 18(12), 1-39.<br /><a href="https://doi.org/10.1371/journal.pcbi.1010714">https://doi.org/10.1371/journal.pcbi.1010714</a>, <a href="https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1">BioRxiv</a>.</p>
   </li>
   <li>N. Pfister, J. Peters: <em>Identifiability of Sparse Causal Effects using Instrumental Variables</em>. In Proceedings of the 38th Annual Conference on
-Uncertainty in Artificial Intelligence (UAI), PMLR 180:1613-1622. ArXiv <a href="https://arxiv.org/abs/2203.09380">https://arxiv.org/abs/2203.09380</a>
+Uncertainty in Artificial Intelligence (UAI), PMLR 180, 1613-1622.<br /><a href="https://proceedings.mlr.press/v180/pfister22a.html">https://proceedings.mlr.press/v180/pfister22a.html</a>. <a href="https://arxiv.org/abs/2203.09380">ArXiv</a>.
     <ul>
       <li><a href="download/spaceIV_supplementary_code.zip">Supplementary code</a></li>
     </ul>
   </li>
   <li>
-    <p>S. Saengkyongam, L. Henckel, N. Pfister, J. Peters: <em>Exploiting Independent Instruments: Identification and Distribution Generalization</em>. In Proceedings of the 39th International Conference on Machine Learning (ICML), PMLR 162:18935-18958. <a href="https://proceedings.mlr.press/v162/saengkyongam22a.html">https://proceedings.mlr.press/v162/saengkyongam22a.html</a></p>
+    <p>S. Saengkyongam, L. Henckel, N. Pfister, J. Peters: <em>Exploiting Independent Instruments: Identification and Distribution Generalization</em>. In Proceedings of the 39th International Conference on Machine Learning (ICML), PMLR 162, 18935-18958.<br /><a href="https://proceedings.mlr.press/v162/saengkyongam22a.html">https://proceedings.mlr.press/v162/saengkyongam22a.html</a>, <a href="https://arxiv.org/abs/2202.01864">ArXiv</a>.</p>
   </li>
   <li>
-    <p>J. Peters, S. Bauer, N. Pfister: <em>Causal Models for Dynamical Systems</em>. In Probabilistic and Causal Inference: The Works of Judea Pearl (pp. 671-690). <a href="https://doi.org/10.1145/3501714.3501752">https://doi.org/10.1145/3501714.3501752</a></p>
+    <p>J. Peters, S. Bauer, N. Pfister: <em>Causal Models for Dynamical Systems</em>. In Probabilistic and Causal Inference: The Works of Judea Pearl, pp. 671-690.<br /><a href="https://doi.org/10.1145/3501714.3501752">https://doi.org/10.1145/3501714.3501752</a>, <a href="https://arxiv.org/abs/2001.06208">ArXiv</a>.</p>
   </li>
-  <li>S. Weichwald and S. W. Mogensen, T. E. Lee, D. Baumann, O. Kroemer, I. Guyon, S. Trimpe, J. Peters, N. Pfister: <em>Learning by Doing: Controlling a Dynamical System using Causality, Control, and Reinforcement Learning</em>. Proceedings of the NeurIPS 2021 Competitions and Demonstrations Track, PMLR 176:246-258, 2022. <a href="https://proceedings.mlr.press/v176/weichwald22a.html">https://proceedings.mlr.press/v176/weichwald22a.html</a></li>
+  <li>
+    <p>S. Weichwald and S. W. Mogensen, T. E. Lee, D. Baumann, O. Kroemer, I. Guyon, S. Trimpe, J. Peters, N. Pfister: <em>Learning by Doing: Controlling a Dynamical System using Causality, Control, and Reinforcement Learning</em>. Proceedings of the NeurIPS 2021 Competitions and Demonstrations Track, PMLR 176, 246-258.<br /><a href="https://proceedings.mlr.press/v176/weichwald22a.html">https://proceedings.mlr.press/v176/weichwald22a.html</a>, <a href="https://arxiv.org/abs/2202.06052">ArXiv</a>.</p>
+  </li>
+  <li>R. Christiansen, N. Pfister, M. Jakobsen, N. Gnecco, J. Peters: <em>A Causal Framework for Distribution Generalization</em>. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 44(10), 6614–6630.<br /><a href="https://doi.org/10.1109/TPAMI.2021.3094760">https://doi.org/10.1109/TPAMI.2021.3094760</a>, <a href="https://arxiv.org/abs/2006.07433">ArXiv</a>.</li>
 </ul>
 
 <h3 id="2021">2021</h3>
 <ul>
   <li>
-    <p>E. G. Williams, N. Pfister, S. Roy, C. Statzer, J. Haverty, J. Ingels, C. Bohl, M. Hasan, J. Cuklina, P. Bühlmann, N. Zamboni, L. Lu, C. Y. Ewald, R. W. Williams, R. Aebersold: <em>Multi-Omic Profiling of the Liver Across Diets and Age in a Diverse Mouse Population</em>. Cell Systems, 13(1), 43-57. <a href="https://doi.org/10.1016/j.cels.2021.09.005">https://doi.org/10.1016/j.cels.2021.09.005</a></p>
+    <p>E. G. Williams, N. Pfister, S. Roy, C. Statzer, J. Haverty, J. Ingels, C. Bohl, M. Hasan, J. Cuklina, P. Bühlmann, N. Zamboni, L. Lu, C. Y. Ewald, R. W. Williams, R. Aebersold: <em>Multi-Omic Profiling of the Liver Across Diets and Age in a Diverse Mouse Population</em>. Cell Systems, 13(1), 43-57.<br /><a href="https://doi.org/10.1016/j.cels.2021.09.005">https://doi.org/10.1016/j.cels.2021.09.005</a>, <a href="https://www.biorxiv.org/content/10.1101/2020.08.20.222968v2">BioRxiv</a>.</p>
   </li>
   <li>
-    <p>R. Christiansen, N. Pfister, M. Jakobsen, N. Gnecco, J. Peters: <em>A Causal Framework for Distribution Generalization</em>. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) (Accepted). Preprint <a href="https://arxiv.org/abs/2006.07433">https://arxiv.org/abs/2006.07433</a></p>
-  </li>
-  <li>
-    <p>N. Pfister, E. Williams, R. Aebersold, P. Bühlmann: <em>Stabilizing Variable Selection and Regression</em>. Annals of Applied Statistics, 15(3):1220-1246. <a href="https://doi.org/10.1214/21-AOAS1487">https://doi.org/10.1214/21-AOAS1487</a></p>
+    <p>N. Pfister, E. Williams, R. Aebersold, P. Bühlmann: <em>Stabilizing Variable Selection and Regression</em>. Annals of Applied Statistics, 15(3), 1220-1246.<br /><a href="https://doi.org/10.1214/21-AOAS1487">https://doi.org/10.1214/21-AOAS1487</a>, <a href="https://arxiv.org/abs/1911.01850">ArXiv</a>.</p>
     <ul>
       <li><a href="download/SR_supplementary_code.zip">Supplementary code</a></li>
     </ul>
@@ -116,23 +116,23 @@ Uncertainty in Artificial Intelligence (UAI), PMLR 180:1613-1622. ArXiv <a href=
 <h3 id="2019">2019</h3>
 
 <ul>
-  <li>N. Pfister, S. Bauer, J. Peters: <em>Learning Stable and Predictive Structures in Kinetic Systems</em>. Proceedings of the National Academy of Sciences (PNAS), 116(51):25405-25411.<br /><a href="https://doi.org/10.1073/pnas.1905688116">https://doi.org/10.1073/pnas.1905688116</a>
+  <li>N. Pfister, S. Bauer, J. Peters: <em>Learning Stable and Predictive Structures in Kinetic Systems</em>. Proceedings of the National Academy of Sciences (PNAS), 116(51), 25405-25411.<br /><a href="https://doi.org/10.1073/pnas.1905688116">https://doi.org/10.1073/pnas.1905688116</a>, <a href="https://arxiv.org/abs/1810.11776">ArXiv</a>.
     <ul>
       <li><a href="https://CausalKinetiX.org">Project website</a></li>
     </ul>
   </li>
-  <li>N. Pfister, S. Weichwald, P. Bühlmann, B. Schölkopf: <em>Robustifying Independent Component Analysis by Adjusting for Group-Wise Stationary Noise</em>. Journal of Machine Learning Research, 20(147):1-50.<br /><a href="http://www.jmlr.org/papers/volume20/18-399/18-399.pdf">http://www.jmlr.org/papers/volume20/18-399/18-399.pdf</a>
+  <li>N. Pfister, S. Weichwald, P. Bühlmann, B. Schölkopf: <em>Robustifying Independent Component Analysis by Adjusting for Group-Wise Stationary Noise</em>. Journal of Machine Learning Research, 20(147), 1-50.<br /><a href="http://www.jmlr.org/papers/volume20/18-399/18-399.pdf">http://www.jmlr.org/papers/volume20/18-399/18-399.pdf</a>, <a href="https://arxiv.org/abs/1806.01094">ArXiv</a>.
     <ul>
       <li><a href="https://sweichwald.de/coroICA/">Project website</a></li>
     </ul>
   </li>
-  <li>N. Pfister, P. Bühlmann, J. Peters: <em>Invariant Causal Prediction for Sequential Data</em>. Journal of the American Statistical Association, 114(527):1264-1276.<br /><a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2018.1491403">https://www.tandfonline.com/doi/full/10.1080/01621459.2018.1491403</a></li>
+  <li>N. Pfister, P. Bühlmann, J. Peters: <em>Invariant Causal Prediction for Sequential Data</em>. Journal of the American Statistical Association, 114(527), 1264-1276.<br /><a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2018.1491403">https://www.tandfonline.com/doi/full/10.1080/01621459.2018.1491403</a>, <a href="https://arxiv.org/abs/1706.08058">ArXiv</a>.</li>
 </ul>
 
 <h3 id="2018">2018</h3>
 
 <ul>
-  <li>N. Pfister, P. Bühlmann, B. Schölkopf, J. Peters: <em>Kernel-based Tests for Joint Independence</em>. Journal of the Royal Statistical Society: Series B, 80(1), 5-31.<br /><a href="http://onlinelibrary.wiley.com/doi/10.1111/rssb.12235/full">http://onlinelibrary.wiley.com/doi/10.1111/rssb.12235/full</a>
+  <li>N. Pfister, P. Bühlmann, B. Schölkopf, J. Peters: <em>Kernel-based Tests for Joint Independence</em>. Journal of the Royal Statistical Society: Series B, 80(1), 5-31.<br /><a href="http://onlinelibrary.wiley.com/doi/10.1111/rssb.12235/full">http://onlinelibrary.wiley.com/doi/10.1111/rssb.12235/full</a>, <a href="https://arxiv.org/abs/1603.00285">ArXiv</a>.
     <ul>
       <li><a href="download/supplementary_code.tar.gz">Supplementary code</a></li>
     </ul>
