--- a/publications.html
+++ b/publications.html
@@ -66,12 +66,12 @@
             <div class="container content">
                 <h3 id="preprints">Preprints</h3>
 <ul>
-  <li>S. Huang, E. Ailer, N. Kilbertus, N. Pfister: <em>Supervised Learning and Model Analysis with Compositional Data</em>.<br />Preprint <a href="https://arxiv.org/abs/2205.07271">https://arxiv.org/abs/2205.07271</a></li>
+  <li>S. Huang, E. Ailer, N. Kilbertus, N. Pfister: <em>Supervised Learning and Model Analysis with Compositional Data</em>.<br />Preprint <a href="https://arxiv.org/abs/2205.07271">ArXiv</a></li>
 </ul>
 
 <h3 id="2023">2023</h3>
 <ul>
-  <li>N. Thams, S. Saengkyongam, N. Pfister, J. Peters: <em>Statistical Testing under Distributional Shifts</em>. Journal of the Royal Statistical Society: Series B (Accepted).<br />Preprint <a href="https://arxiv.org/abs/2105.10821">https://arxiv.org/abs/2105.10821</a></li>
+  <li>N. Thams, S. Saengkyongam, N. Pfister, J. Peters: <em>Statistical Testing under Distributional Shifts</em>. Journal of the Royal Statistical Society: Series B (Accepted).<br />Preprint <a href="https://arxiv.org/abs/2105.10821">ArXiv</a></li>
 </ul>
 
 <h3 id="2022">2022</h3>
@@ -102,15 +102,12 @@ Uncertainty in Artificial Intelligence (UAI), PMLR 180, 1613-1622.<br /><a href=
 
 <h3 id="2021">2021</h3>
 <ul>
-  <li>
-    <p>E. G. Williams, N. Pfister, S. Roy, C. Statzer, J. Haverty, J. Ingels, C. Bohl, M. Hasan, J. Cuklina, P. Bühlmann, N. Zamboni, L. Lu, C. Y. Ewald, R. W. Williams, R. Aebersold: <em>Multi-Omic Profiling of the Liver Across Diets and Age in a Diverse Mouse Population</em>. Cell Systems, 13(1), 43-57.<br /><a href="https://doi.org/10.1016/j.cels.2021.09.005">https://doi.org/10.1016/j.cels.2021.09.005</a>, <a href="https://www.biorxiv.org/content/10.1101/2020.08.20.222968v2">BioRxiv</a>.</p>
-  </li>
-  <li>
-    <p>N. Pfister, E. Williams, R. Aebersold, P. Bühlmann: <em>Stabilizing Variable Selection and Regression</em>. Annals of Applied Statistics, 15(3), 1220-1246.<br /><a href="https://doi.org/10.1214/21-AOAS1487">https://doi.org/10.1214/21-AOAS1487</a>, <a href="https://arxiv.org/abs/1911.01850">ArXiv</a>.</p>
+  <li>N. Pfister, E. Williams, R. Aebersold, P. Bühlmann: <em>Stabilizing Variable Selection and Regression</em>. Annals of Applied Statistics, 15(3), 1220-1246.<br /><a href="https://doi.org/10.1214/21-AOAS1487">https://doi.org/10.1214/21-AOAS1487</a>, <a href="https://arxiv.org/abs/1911.01850">ArXiv</a>.
     <ul>
       <li><a href="download/SR_supplementary_code.zip">Supplementary code</a></li>
     </ul>
   </li>
+  <li>E. G. Williams, N. Pfister, S. Roy, C. Statzer, J. Haverty, J. Ingels, C. Bohl, M. Hasan, J. Cuklina, P. Bühlmann, N. Zamboni, L. Lu, C. Y. Ewald, R. W. Williams, R. Aebersold: <em>Multi-Omic Profiling of the Liver Across Diets and Age in a Diverse Mouse Population</em>. Cell Systems, 13(1), 43-57.<br /><a href="https://doi.org/10.1016/j.cels.2021.09.005">https://doi.org/10.1016/j.cels.2021.09.005</a>, <a href="https://www.biorxiv.org/content/10.1101/2020.08.20.222968v2">BioRxiv</a>.</li>
 </ul>
 
 <h3 id="2019">2019</h3>
