--- a/reviewing.html
+++ b/reviewing.html
@@ -90,7 +90,8 @@
 
 <h4 id="area-chair">Area Chair</h4>
 <ul>
-  <li>International Conference on Artificial Intelligence and Statistics (AISTATS2022, AISTATS2023)</li>
+  <li>International Conference on Artificial Intelligence and Statistics (2022, 2023)</li>
+  <li>NeurIPS Workshop: Neuro Causal and Symbolic AI (2022)</li>
 </ul>
 
 <h4 id="reviewing">Reviewing</h4>
