--- a/teaching.html
+++ b/teaching.html
@@ -64,7 +64,16 @@
         <hr>
         
             <div class="container content">
-                <h3 id="course-responsible">Course Responsible</h3>
+                <h3 id="lecture-notes">Lecture notes</h3>
+
+<ul>
+  <li><a href="download/lecture_notes_statsB.pdf">Statistics B: Modern Statistical Theory</a></li>
+</ul>
+
+<p>Please let me know if you spot any mistakes or have any other comments
+on the lecture notes.</p>
+
+<h3 id="course-responsible">Course Responsible</h3>
 
 <ul>
   <li><a href="http://web.math.ku.dk/~susanne/BSc/Projects2023blok34">Bachelor Projects in Statistics</a> (Block III/IV - 2022/2023)</li>
