--- a/publications.html
+++ b/publications.html
@@ -66,11 +66,12 @@
             <div class="container content">
                 <h3 id="preprints">Preprints</h3>
 <ul>
-  <li>S. Huang, E. Ailer, N. Kilbertus, N. Pfister: <em>Supervised Learning and Model Analysis with Compositional Data</em>.<br />Preprint <a href="https://arxiv.org/abs/2205.07271">ArXiv</a></li>
+  <li>S. Saengkyongam, N. Pfister, P. Klasnja and S. Murphy, J. Peters: <em>Effect-Invariant Mechanisms for Policy Generalization</em>. <br />Preprint <a href="https://arxiv.org/abs/2306.10983">ArXiv</a>.</li>
 </ul>
 
 <h3 id="2023">2023</h3>
 <ul>
+  <li>S. Huang, E. Ailer, N. Kilbertus, N. Pfister: <em>Supervised Learning and Model Analysis with Compositional Data</em>. PLOS Computational Biology (Accepted). <br />Preprint <a href="https://arxiv.org/abs/2205.07271">ArXiv</a></li>
   <li>N. Thams, S. Saengkyongam, N. Pfister, J. Peters: <em>Statistical Testing under Distributional Shifts</em>. Journal of the Royal Statistical Society: Series B (Accepted).<br />Preprint <a href="https://arxiv.org/abs/2105.10821">ArXiv</a></li>
 </ul>
 
@@ -111,7 +112,6 @@ Uncertainty in Artificial Intelligence (UAI), PMLR 180, 1613-1622.<br /><a href=
 </ul>
 
 <h3 id="2019">2019</h3>
-
 <ul>
   <li>N. Pfister, S. Bauer, J. Peters: <em>Learning Stable and Predictive Structures in Kinetic Systems</em>. Proceedings of the National Academy of Sciences (PNAS), 116(51), 25405-25411.<br /><a href="https://doi.org/10.1073/pnas.1905688116">https://doi.org/10.1073/pnas.1905688116</a>, <a href="https://arxiv.org/abs/1810.11776">ArXiv</a>.
     <ul>
