--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="container content">
                 <p><img class="profile-picture" src="download/profile_pic.jpg" /></p>
 
-<p>Assistant Professor of Statistics<br />
+<p>Associate Professor of Statistics<br />
 <a href="https://cocala.github.io/">Copenhagen Causality Lab</a><br />
 <a href="https://www.math.ku.dk/english/">Department of Mathematical Sciences</a>, <a href="https://www.ku.dk/english/">University of Copenhagen</a></p>
 
@@ -98,6 +98,7 @@ The current PhD call can be found [here](https://www.math.ku.dk/english/about/jo
 <h3 id="news">News</h3>
 
 <ul>
+  <li>July 2023: I was promoted to associate professor. A big thank you to everyone that has supported me.</li>
   <li>Oct 2022: <a href="https://www.arlundborg.com/">Anton Rask Lundborg</a> started a postdoc.</li>
   <li>Oct 2022: <a href="https://www.math.ku.dk/english/about/news/new-names/margherita-lazzaretto-phd-student/">Margherita Lazzaretto</a> has started her PhD position.</li>
   <li>Oct 2021: I was awarded an <a href="https://datascience.novonordiskfonden.dk/projects/causalbiome-developing-a-unified-statistical-framework-for-analyzing-microbiome-data/">Emerging Investigator grant</a> by the Novo Nordisk Foundation for my project <em>CausalBiome: Developing a unified statistical framework for analyzing microbiome data</em>.</li>
@@ -106,7 +107,7 @@ The current PhD call can be found [here](https://www.math.ku.dk/english/about/jo
   <li>Sept 2020: <a href="https://sorawitj.github.io/">Sorawit
 Saengkyongam</a>
 started his PhD position under Jonas Peters and my supervision.</li>
-  <li>Jan 2020: Started position as Assistant Professor at the Unversity
+  <li>Jan 2020: Started position as assistant professor at the Unversity
 of Copenhagen.</li>
 </ul>
 
