--- a/bachelor_projects.html
+++ b/bachelor_projects.html
@@ -12,6 +12,7 @@
   <body>
     <div class="container content">
       <h1 id="bachelor-projects-in-statistics">Bachelor projects in statistics</h1>
+<p>** Niklas Pfister, July 2023 **</p>
 
 <p>This page outlines thesis projects in statistics for the bachelor’s
 degree in mathematics or mathematics-economy at the University of
@@ -22,9 +23,9 @@ with your own project.</p>
 
 <h2 id="formalities">Formalities</h2>
 
-<p>The thesis is written during block 1 and block 2, 2023. The start date is 
-<strong>September 4</strong> and the thesis is handed in on <strong>January 12</strong>. There is a subsequent
-oral defense.</p>
+<p>The thesis is written during block 1 and block 2, 2023/2024. The start
+date is <strong>September 4</strong> and the thesis is handed in on <strong>January
+12</strong>. There is a subsequent oral defense.</p>
 
 <ul>
   <li>The thesis should be written in English.</li>
@@ -40,13 +41,12 @@ oral defense.</p>
 <h3 id="thesis-contract">Thesis contract</h3>
 
 <p>Use the project descriptions below and take a look at the suggested
-literature to come up with a proposed title and description. We will
+literature to come up with a proposed title and description. I will
 then read and comment on your proposal and approve it afterwards. Fill
 out the <a href="https://kuforms.ku.dk/xform/frontend/FormEngine/v2/ShowForm.aspx?alias=SCI3921&amp;groupId=2&amp;doctype=5&amp;formid=3983">contract
 formular</a>,
-send the pdf to np@math.ku.dk, and we will submit it. Remember to sign
-the contract. Here follows some information that needs to go into the
-contract.</p>
+send the pdf to np@math.ku.dk, and I will submit it. Remember to sign
+the contract.</p>
 
 <h3 id="details-on-supervision">Details on supervision</h3>
 
@@ -57,22 +57,22 @@ working. So if you select such a project, you should feel comfortable
 working independently.</p>
 
 <ul>
-  <li>More than 5 students on same project:
+  <li>Sufficient students on same project:
     <ul>
       <li>
-        <p>During block 1: We will meet in group and you (the students) will
+        <p>During block 1: We will meet in groups and you (the students) will
  present the background literature and theory, and we will have time
  for questions, both general questions as well as questions specific
- to what we are reading.</p>
+ to what you are reading.</p>
       </li>
       <li>
-        <p>During block 2: We will meet individually. At these meetings you are
- expected to be shortly present your progress and have a set of
+        <p>During block 2: We will meet individually. At these meetings you
+ are expected to shortly present your progress and have a set of
  prepared questions you would like to discuss.</p>
       </li>
     </ul>
   </li>
-  <li>Less than 5 students on same project:
+  <li>Insufficient students on same project:
     <ul>
       <li>
         <p>During block 1: Short individual meetings. The goal of these
@@ -136,7 +136,7 @@ Yihui Xie, J. J. Allaire, Garrett Grolemund</li>
 
 <p>Below we suggest two potential projects. For each data is available
 and a rough idea of what you could work on is provided. You are,
-however, encouraged to ajust the research question to your own
+however, encouraged to adjust the research question to your own
 interests.</p>
 
 <p>If you already have an applied data-based project of your own in mind,
@@ -166,8 +166,8 @@ however, this is often rejected by practioners as non-linear least
 squares does not come with the standard model-based prediction
 intervals. In this project, you should investigate, based on the tree
 biomass data, how the coverage of different types of non-parametric
-prediction intervals compare to the standard ones based on the log-log
-transform.</p>
+prediction intervals compare to the currently used log-log transform
+based intervals.</p>
 
 <p>The final report should include an overview of the data as well as a
 short introduction to any of the methods that were used in the
