--- a/bachelor_projects.html
+++ b/bachelor_projects.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container content">
       <h1 id="bachelor-projects-in-statistics">Bachelor projects in statistics</h1>
-<p>** Niklas Pfister, July 2023 **</p>
+<p><strong>Niklas Pfister, July 2023</strong></p>
 
 <p>This page outlines thesis projects in statistics for the bachelor’s
 degree in mathematics or mathematics-economy at the University of
