--- a/publications.html
+++ b/publications.html
@@ -71,20 +71,24 @@
 
 <h3 id="2023">2023</h3>
 <ul>
-  <li>S. Huang, E. Ailer, N. Kilbertus, N. Pfister: <em>Supervised Learning and Model Analysis with Compositional Data</em>. PLOS Computational Biology (Accepted). <br />Preprint <a href="https://arxiv.org/abs/2205.07271">ArXiv</a></li>
-  <li>N. Thams, S. Saengkyongam, N. Pfister, J. Peters: <em>Statistical Testing under Distributional Shifts</em>. Journal of the Royal Statistical Society: Series B (Accepted).<br />Preprint <a href="https://arxiv.org/abs/2105.10821">ArXiv</a></li>
+  <li>
+    <p>S. Huang, E. Ailer, N. Kilbertus, N. Pfister: <em>Supervised Learning and Model Analysis with Compositional Data</em>. PLOS Computational Biology, 19(6), 1-19.<br /><a href="https://doi.org/10.1371/journal.pcbi.1011240">https://doi.org/10.1371/journal.pcbi.1011240</a> <a href="https://arxiv.org/abs/2205.07271">ArXiv</a></p>
+  </li>
+  <li>
+    <p>N. Thams, S. Saengkyongam, N. Pfister, J. Peters: <em>Statistical Testing under Distributional Shifts</em>. Journal of the Royal Statistical Society: Series B, 85(3), 597-663.<br /><a href="https://doi.org/10.1093/jrsssb/qkad018">https://doi.org/10.1093/jrsssb/qkad018</a>, <a href="https://arxiv.org/abs/2105.10821">ArXiv</a></p>
+  </li>
+  <li>
+    <p>S. Saengkyongam, N. Thams, J. Peters, N. Pfister: <em>Invariant Policy Learning: A causal perspective</em>. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 45(7), 8606-8620.<br /><a href="https://doi.org/10.1109/TPAMI.2022.3232363">https://doi.org/10.1109/TPAMI.2022.3232363</a> <a href="https://arxiv.org/abs/2106.00808">ArXiv</a>.</p>
+  </li>
 </ul>
 
 <h3 id="2022">2022</h3>
 <ul>
   <li>
-    <p>S. Saengkyongam, N. Thams, J. Peters, N. Pfister: <em>Invariant Policy Learning: A causal perspective</em>. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) (Accepted).<br />Preprint <a href="https://arxiv.org/abs/2106.00808">ArXiv</a>.</p>
-  </li>
-  <li>
     <p>A. Ruaud, N. Pfister, R. Ley, N. Youngblut: <em>Interpreting tree ensemble machine learning models with endoR</em>. PLOS Computational Biology, 18(12), 1-39.<br /><a href="https://doi.org/10.1371/journal.pcbi.1010714">https://doi.org/10.1371/journal.pcbi.1010714</a>, <a href="https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1">BioRxiv</a>.</p>
   </li>
   <li>N. Pfister, J. Peters: <em>Identifiability of Sparse Causal Effects using Instrumental Variables</em>. In Proceedings of the 38th Annual Conference on
-Uncertainty in Artificial Intelligence (UAI), PMLR 180, 1613-1622.<br /><a href="https://proceedings.mlr.press/v180/pfister22a.html">https://proceedings.mlr.press/v180/pfister22a.html</a>. <a href="https://arxiv.org/abs/2203.09380">ArXiv</a>.
+Uncertainty in Artificial Intelligence (UAI), PMLR 180, 1613-1622.<br /><a href="https://proceedings.mlr.press/v180/pfister22a.html">https://proceedings.mlr.press/v180/pfister22a.html</a>, <a href="https://arxiv.org/abs/2203.09380">ArXiv</a>.
     <ul>
       <li><a href="download/spaceIV_supplementary_code.zip">Supplementary code</a></li>
     </ul>
