--- a/publications.html
+++ b/publications.html
@@ -72,13 +72,13 @@
 <h3 id="2023">2023</h3>
 <ul>
   <li>
-    <p>S. Huang, E. Ailer, N. Kilbertus, N. Pfister: <em>Supervised Learning and Model Analysis with Compositional Data</em>. PLOS Computational Biology, 19(6), 1-19.<br /><a href="https://doi.org/10.1371/journal.pcbi.1011240">https://doi.org/10.1371/journal.pcbi.1011240</a> <a href="https://arxiv.org/abs/2205.07271">ArXiv</a></p>
+    <p>S. Huang, E. Ailer, N. Kilbertus, N. Pfister: <em>Supervised Learning and Model Analysis with Compositional Data</em>. PLOS Computational Biology, 19(6), 1-19.<br /><a href="https://doi.org/10.1371/journal.pcbi.1011240">https://doi.org/10.1371/journal.pcbi.1011240</a>, <a href="https://arxiv.org/abs/2205.07271">ArXiv</a>.</p>
   </li>
   <li>
-    <p>N. Thams, S. Saengkyongam, N. Pfister, J. Peters: <em>Statistical Testing under Distributional Shifts</em>. Journal of the Royal Statistical Society: Series B, 85(3), 597-663.<br /><a href="https://doi.org/10.1093/jrsssb/qkad018">https://doi.org/10.1093/jrsssb/qkad018</a>, <a href="https://arxiv.org/abs/2105.10821">ArXiv</a></p>
+    <p>N. Thams, S. Saengkyongam, N. Pfister, J. Peters: <em>Statistical Testing under Distributional Shifts</em>. Journal of the Royal Statistical Society: Series B, 85(3), 597-663.<br /><a href="https://doi.org/10.1093/jrsssb/qkad018">https://doi.org/10.1093/jrsssb/qkad018</a>, <a href="https://arxiv.org/abs/2105.10821">ArXiv</a>.</p>
   </li>
   <li>
-    <p>S. Saengkyongam, N. Thams, J. Peters, N. Pfister: <em>Invariant Policy Learning: A causal perspective</em>. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 45(7), 8606-8620.<br /><a href="https://doi.org/10.1109/TPAMI.2022.3232363">https://doi.org/10.1109/TPAMI.2022.3232363</a> <a href="https://arxiv.org/abs/2106.00808">ArXiv</a>.</p>
+    <p>S. Saengkyongam, N. Thams, J. Peters, N. Pfister: <em>Invariant Policy Learning: A causal perspective</em>. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 45(7), 8606-8620.<br /><a href="https://doi.org/10.1109/TPAMI.2022.3232363">https://doi.org/10.1109/TPAMI.2022.3232363</a>, <a href="https://arxiv.org/abs/2106.00808">ArXiv</a>.</p>
   </li>
 </ul>
 
