--- a/bachelor_projects.html
+++ b/bachelor_projects.html
@@ -19,7 +19,7 @@ degree in mathematics or mathematics-economy at the University of
 Copenhagen. You may either pick one of the suggested topics or come up
 with your own project.</p>
 
-<p><strong>Info meeting: Monday, August 28, 3:15-4:00pm, [Room: TBA].</strong></p>
+<p><strong>Info meeting: Monday, August 28, 3:15-4:00pm, Room: Auditorium 2 in AKB.</strong></p>
 
 <h2 id="formalities">Formalities</h2>
 
