--- a/bachelor_projects.html
+++ b/bachelor_projects.html
@@ -144,7 +144,7 @@ you can send me an email and ask whether it is feasible. Please note
 that I may decline to supervise a specific project if it does not fall
 within my area of expertise or does not seem sufficiently concrete.</p>
 
-<h3 id="project-1-biomass-prediction---comparing-confidence-intervals">Project 1: Biomass prediction - Comparing confidence intervals</h3>
+<h3 id="project-1-biomass-prediction---comparing-prediction-intervals">Project 1: Biomass prediction - Comparing prediction intervals</h3>
 
 <p>Quantifying the biomass due to trees is important to assess the stored
 carbon in a specific region. However, estimating the entire biomass in
