--- a/publications.html
+++ b/publications.html
@@ -66,7 +66,15 @@
             <div class="container content">
                 <h3 id="preprints">Preprints</h3>
 <ul>
-  <li>S. Saengkyongam, N. Pfister, P. Klasnja and S. Murphy, J. Peters: <em>Effect-Invariant Mechanisms for Policy Generalization</em>. <br />Preprint <a href="https://arxiv.org/abs/2306.10983">ArXiv</a>.</li>
+  <li>
+    <p>N. Gnecco, J. Peters, S. Engelke, N. Pfister: <em>Boosted Control Functions</em>. <br />Preprint <a href="https://arxiv.org/abs/2310.05805">ArXiv</a>.</p>
+  </li>
+  <li>
+    <p>S. Saengkyongam, E. Rosenfeld, P. Ravikumar, N. Pfister, J. Peters: <em>Identifying Representations for Intervention Extrapolation</em>. <br />Preprint <a href="https://arxiv.org/abs/2310.04295">ArXiv</a>.</p>
+  </li>
+  <li>
+    <p>S. Saengkyongam, N. Pfister, P. Klasnja, S. Murphy, J. Peters: <em>Effect-Invariant Mechanisms for Policy Generalization</em>. <br />Preprint <a href="https://arxiv.org/abs/2306.10983">ArXiv</a>.</p>
+  </li>
 </ul>
 
 <h3 id="2023">2023</h3>
