--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,9 @@
                 <h3 id="preprints">Preprints</h3>
 <ul>
   <li>
+    <p>A. R. Lundborg, N. Pfister: <em>Perturbation-based Analysis of Compositional Data</em>. <br />Preprint <a href="https://arxiv.org/abs/2311.18501">ArXiv</a>.</p>
+  </li>
+  <li>
     <p>N. Gnecco, J. Peters, S. Engelke, N. Pfister: <em>Boosted Control Functions</em>. <br />Preprint <a href="https://arxiv.org/abs/2310.05805">ArXiv</a>.</p>
   </li>
   <li>
