--- a/bachelor_projects.html
+++ b/bachelor_projects.html
@@ -11,29 +11,29 @@
   </head>
   <body>
     <div class="container content">
-      <h1 id="bachelor-projects-in-statistics">Bachelor projects in statistics</h1>
-<p><strong>Niklas Pfister, July 2023</strong></p>
+      <h1 id="bachelor-projects-in-statistics---block-3-and-4">Bachelor projects in statistics - Block 3 and 4</h1>
+<p><strong>Niklas Pfister, December 2023</strong></p>
 
 <p>This page outlines thesis projects in statistics for the bachelor’s
 degree in mathematics or mathematics-economy at the University of
 Copenhagen. You may either pick one of the suggested topics or come up
 with your own project.</p>
 
-<p><strong>Info meeting: Monday, August 28, 3:15-4:00pm, Room: Auditorium 2 in AKB.</strong></p>
+<p><strong>Info meeting: Monday, January 29, 3:15-4:00pm, Room: TBA.</strong></p>
 
 <h2 id="formalities">Formalities</h2>
 
-<p>The thesis is written during block 1 and block 2, 2023/2024. The start
-date is <strong>September 4</strong> and the thesis is handed in on <strong>January
-12</strong>. There is a subsequent oral defense.</p>
+<p>The thesis is written during block 3 and block 4, 2023/2024. The start
+date is <strong>February 5</strong> and the thesis is handed in on <strong>June
+7</strong>. There is a subsequent oral defense.</p>
 
 <ul>
   <li>The thesis should be written in English.</li>
   <li>It’s a 15 ECTS project and you should expect to write between 30 and 45 pages.</li>
   <li>You should be signed up via Selvbetjeningen.</li>
-  <li>You will have to decide which project you will work on by August 31 (email: np@math.ku.dk)</li>
-  <li>You have to send a proposed title and description of your project by September 3 at 3pm (and you will get feedback).</li>
-  <li>You will have to fill out and submit the <a href="https://kunet.ku.dk/fakultet-og-institut/science/uddannelse/projekter/bachelorprojekt/sider/default.aspx">contract</a> before September 4.</li>
+  <li>You will have to decide which project you will work on by February 1 (email: np@math.ku.dk)</li>
+  <li>You have to send a proposed title and description of your project by February 4 at 3pm (and you will get feedback).</li>
+  <li>You will have to fill out and submit the <a href="https://kunet.ku.dk/fakultet-og-institut/science/uddannelse/projekter/bachelorprojekt/sider/default.aspx">contract</a> before February 5.</li>
 </ul>
 
 <p>Below are some additional details on the project.</p>
@@ -52,7 +52,7 @@ the contract.</p>
 
 <p>The type of supervision will depend on whether there are sufficiently
 many students working on the same project as you. Overall, you should
-expect less supervision with projects on which very few students are
+expect less peer interaction with projects on which very few students are
 working. So if you select such a project, you should feel comfortable
 working independently.</p>
 
@@ -134,7 +134,7 @@ Yihui Xie, J. J. Allaire, Garrett Grolemund</li>
 
 <h2 id="project-suggestions">Project suggestions</h2>
 
-<p>Below we suggest two potential projects. For each data is available
+<p>Below are two project suggestions. For each data is available
 and a rough idea of what you could work on is provided. You are,
 however, encouraged to adjust the research question to your own
 interests.</p>
