--- a/reviewing.html
+++ b/reviewing.html
@@ -72,6 +72,7 @@
   <li>Computational and Structural Biotechnology Journal</li>
   <li>Communications in Statistics</li>
   <li>Electronic Journal of Statistics</li>
+  <li>Empirical Econometrics</li>
   <li>Genetic Epidemiology</li>
   <li>Journal of Causal Inference</li>
   <li>Journal of Computational and Graphical Statistics</li>
@@ -80,6 +81,7 @@
   <li>Journal of Machine Learning Research: Machine Learning Open Source Software</li>
   <li>Journal of the Royal Statistical Society (Series B)</li>
   <li>Metrika</li>
+  <li>Nature Machine Intelligence</li>
   <li>R Journal</li>
   <li>Scientific Reports</li>
   <li>Statistical Science</li>
@@ -90,7 +92,7 @@
 
 <h4 id="area-chair">Area Chair</h4>
 <ul>
-  <li>International Conference on Artificial Intelligence and Statistics (2022, 2023)</li>
+  <li>International Conference on Artificial Intelligence and Statistics - AISTATS (2022, 2023, 2024)</li>
   <li>NeurIPS Workshop: Neuro Causal and Symbolic AI (2022)</li>
 </ul>
 
