--- a/bachelor_projects.html
+++ b/bachelor_projects.html
@@ -19,7 +19,7 @@ degree in mathematics or mathematics-economy at the University of
 Copenhagen. You may either pick one of the suggested topics or come up
 with your own project.</p>
 
-<p><strong>Info meeting: Monday, January 29, 3:15-4:00pm, Room: TBA.</strong></p>
+<p><strong>Info meeting: Monday, January 29, 3:15-4:00pm, Room: Aud 10, Universitetsparken 5, HCØ</strong></p>
 
 <h2 id="formalities">Formalities</h2>
 
@@ -266,6 +266,51 @@ formulations, proximal optimization, and microbiome data
 applications</a>. Extension of the
 log-contrast model to include sparsity penalty. Method is available
 as a <a href="https://github.com/Leo-Simpson/c-lasso">python package</a>.</p>
+  </li>
+</ul>
+
+<h3 id="project-3-fluxnet---predictive-modelling">Project 3: FLUXNET - Predictive modelling</h3>
+
+<p>FLUXNET is an international initative that collects data on CO2, water
+and energy exchange between the biosphere and the atmosphere. This
+type of data provides a useful tool to understand how much CO2 is
+captured by photosynthesis. This can then be included in models
+that predict the CO2 concentation in the atmosphere and can help
+improve climate models.</p>
+
+<p>As part of this project you will build a model to predict the
+ecosystem photosynthesis (how much CO2 is absorbed) using a set of
+covariates (e.g., meteorological variables, soil moisture, etc). The
+main challenge is to train the model such that it generalizes
+over space (i.e., models trained on a subset of the sites, should
+predict well also on previously unseen sites).</p>
+
+<p>The final report should include an overview of the data as well as a
+short introduction to any of the prediction methods used in the
+analysis. Furthermore, it should outline the discoveries including a
+clear description of how the different models were compared. It is
+highly recommended to use Python together with
+<a href="https://scikit-learn.org/stable/index.html">scikit-learn</a> which
+provides a unified interface for a large number of different machine
+learning procedure.</p>
+
+<h4 id="data-2">Data</h4>
+
+<p>For this project you will use a subset of the FLUXNET 2015 data called mlflx that
+was preprocessed for the prediction and is available at
+<a href="https://github.com/stineb/mlflx">https://github.com/stineb/mlflx</a>.</p>
+
+<h4 id="literature-2">Literature</h4>
+
+<ul>
+  <li>
+    <p><a href="https://fluxnet.org/">FLUXNET</a>. Official website of the project.</p>
+  </li>
+  <li>
+    <p><a href="https://www.nature.com/articles/s41597-020-0534-3">The FLUXNET2015 dataset and the ONEFlux processing pipeline for
+eddy covariance
+data</a>. Publications
+outlining the data.</p>
   </li>
 </ul>
 
